# kryten-webui

./: CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  REQUIREMENTS.md  config.example.json  pyproject.toml  pyproject.toml.bak  start-moderator.ps1  start-moderator.sh
.github/workflows/: ci.yml  python-publish.yml
kryten_webui/: __init__.py  __main__.py  config.py  service.py
systemd/: README.md  kryten-moderator.service
