[project]
name = "kryten-webui"
version = "0.1.1"
description = "Kryten web interface service - provides web dashboard and control panel"
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
keywords = [ "cytube", "moderation", "chat", "nats", "microservices",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Communications :: Chat", "Topic :: Software Development :: Libraries :: Python Modules",]
dependencies = [ "kryten-py>=0.6.0,<0.7.0",]
[[project.authors]]
name = "Kryten Robot Team"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "pytest>=8.0.0,<9.0.0", "pytest-asyncio>=0.24.0,<0.25.0", "pytest-mock>=3.14.0,<4.0.0", "black>=23.0.0,<24.0.0", "ruff>=0.1.0,<0.2.0", "mypy>=1.7.0,<2.0.0",]

[project.license]
text = "MIT"

[project.scripts]
kryten-webui = "kryten_webui.__main__:main"

[tool.black]
line-length = 100
target-version = [ "py310",]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff.lint]
select = [ "E", "F", "W", "I", "N",]
ignore = [ "E501",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
asyncio_mode = "auto"
addopts = "-v"
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "E402", "F401",]

[tool.hatch.build.targets.wheel]
packages = [ "kryten_webui",]
